[project]
name = "gatewaykit"
version = "0.1.0"
description = "A lightweight, config-driven API gateway"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
gatewaykit = "gateway.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
